--- a/cinema/cinema/Views/Movies/Delete.cshtml
+++ b/cinema/cinema/Views/Movies/Delete.cshtml
@@ -18,6 +18,30 @@
             @Html.DisplayFor(model => model.Description)
         </dd>
         <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.Director)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.Director)
+        </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.Cast)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.Cast)
+        </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.ReleaseYear)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.ReleaseYear)
+        </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.CountryOfOrigin)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.CountryOfOrigin)
+        </dd>
+        <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Length)
         </dt>
         <dd class = "col-sm-10">
@@ -28,12 +52,6 @@
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Genre)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.AdvisedAge)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.AdvisedAge)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Poster)
