--- a/cinema/cinema/Views/Movies/Index.cshtml
+++ b/cinema/cinema/Views/Movies/Index.cshtml
@@ -16,13 +16,22 @@
                 @Html.DisplayNameFor(model => model.Description)
             </th>
             <th>
+                @Html.DisplayNameFor(model => model.Director)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Cast)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.ReleaseYear)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.CountryOfOrigin)
+            </th>
+            <th>
                 @Html.DisplayNameFor(model => model.Length)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.Genre)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.AdvisedAge)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.Poster)
@@ -43,13 +52,22 @@
                 @Html.DisplayFor(modelItem => item.Description)
             </td>
             <td>
+                @Html.DisplayFor(modelItem => item.Director)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Cast)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.ReleaseYear)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.CountryOfOrigin)
+            </td>
+            <td>
                 @Html.DisplayFor(modelItem => item.Length)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Genre)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.AdvisedAge)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Poster)
