--- a/cinema/cinema/Views/Shows/Delete.cshtml
+++ b/cinema/cinema/Views/Shows/Delete.cshtml
@@ -18,6 +18,12 @@
             @Html.DisplayFor(model => model.ThreeD)
         </dd>
         <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.Room)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.Room)
+        </dd>
+        <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.StartTime)
         </dt>
         <dd class = "col-sm-10">
@@ -28,6 +34,12 @@
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Break)
+        </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.Movie)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.Movie)
         </dd>
     </dl>
     
