--- a/cinema/cinema/Views/Shows/Details.cshtml
+++ b/cinema/cinema/Views/Shows/Details.cshtml
@@ -17,6 +17,12 @@
             @Html.DisplayFor(model => model.ThreeD)
         </dd>
         <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.Room)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.Room)
+        </dd>
+        <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.StartTime)
         </dt>
         <dd class = "col-sm-10">
@@ -27,6 +33,12 @@
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Break)
+        </dd>
+         <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.Movie)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.Movie)
         </dd>
     </dl>
 </div>
