--- a/cinema/cinema/Pages/Index.cshtml
+++ b/cinema/cinema/Pages/Index.cshtml
@@ -1,10 +1,14 @@
 ﻿@page
+@using cinema.Models
+@using cinema.Services
 @model IndexModel
 @{
     ViewData["Title"] = "Home page";
 }
 
+
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
     <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+
 </div>
