--- a/cinema/cinema/Views/Seats/Index.cshtml
+++ b/cinema/cinema/Views/Seats/Index.cshtml
@@ -1,7 +1,8 @@
-
 @{
     ViewBag.Title = "title";
+    string seatString = ViewBag.seats;
     Layout = "_Layout";
 }
 
 <h2>title</h2>
+<p>@seatString</p>
