--- a/cinema/cinema/Views/Tickets/Create.cshtml
+++ b/cinema/cinema/Views/Tickets/Create.cshtml
@@ -19,7 +19,7 @@
         <form method="get" asp-action="payment">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" name="quantity" value="@quantity">
-            <input type="hidden" name="show" value="@ViewBag.show">
+            <input type="hidden" name="showId" value="@ViewBag.show">
             <div class="form-group form-check">
                 <label class="form-check-label">
                     @Html.DisplayNameFor(model => model.ChildDiscount)
