--- a/cinema/cinema/Views/Tickets/Payment.cshtml
+++ b/cinema/cinema/Views/Tickets/Payment.cshtml
@@ -7,12 +7,8 @@
 
 <h2>Betalings overzicht:</h2>
 
-<div>Voorstelling: </div>
-<div>Aantal kaartjes</div>
-<div>Kinder korting</div>
-<div>Student korting</div>
-<div>Senioren korting</div>
-
+<div>Aantal kaartjes @ViewBag.quantity</div>
+<div>Prijs @ViewBag.Price</div>
 
 <h3>Betalen</h3>
 <form method="get" asp-action="create">
