--- a/cinema/cinema/Views/Shows/Index.cshtml
+++ b/cinema/cinema/Views/Shows/Index.cshtml
@@ -1,28 +1,42 @@
 ﻿@model IEnumerable<cinema.Models.Show>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Voorstellingen";
     Layout = "~/Pages/Shared/_Layout.cshtml";
 }
 
 <h1>Voorstellingen</h1>
 
 <div class="container-fluid">
-    @foreach (var show in Model)
-    {
-        <div class="row">
-            <div class="col-4">
-                <a asp-controller="Tickets" asp-action="Quantity" asp-route-id="@show.Id">
-                    <img class="img-fluid" src="@show.Movie.Poster"/>
-                </a>
-            </div>
-            <div class="col-8">
-                <h1>@show.Movie.Name</h1>
-                <p>Begintijd: @show.StartTime</p>
-                <p>Zaal: @show.Room</p>
-                @if (@show.Break) {<p>Pauze</p>} else {<p>Geen pauze</p>}
-            </div>
-        </div>
+    <div class="row">
+        @foreach (var show in Model)
+        {
+            <div class="col-2">
 
-    }
+                <div class="card show my-3">
+                    <img class="card-img-top" src="@show.Movie.Poster">
+                    <div class="card-body">
+                        <p>Begintijd: @TimeOnly.FromDateTime(show.StartTime)</p>
+                        <p>Zaal: @show.Room</p>
+                        @if (@show.Break)
+                        {
+                            <p>Pauze</p>
+                        }
+                        else
+                        {
+                            <p>Geen pauze</p>
+                        }
+                    </div>
+                    <div class="card-footer">
+                        <form method="get">
+                            <button class="btn btn-primary w-100" asp-controller="Tickets" asp-action="Quantity" asp-route-id="@show.Id">Naar kaartjes</button>
+                        </form>
+                        <form method="get">
+                        <button class="btn btn-secondary w-100" asp-controller="Movies" asp-action="index" asp-route-id="@show.Movie.Name">Film-info</button>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        }
+    </div>
 </div>
