--- a/cinema/cinema/Views/Shows/Index.cshtml
+++ b/cinema/cinema/Views/Shows/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@using Microsoft.EntityFrameworkCore.Metadata.Internal
+﻿@using cinema.Models
+@using cinema.Services
 @model Dictionary<DateOnly, Dictionary<cinema.Models.Movie, List<cinema.Models.Show>>>
 
 @{
@@ -14,28 +15,41 @@
 <h1>Voorstellingen</h1>
 
 <div class="container-fluid">
+    
     @foreach (var date in Model.Keys)
     {
-        <h2>@date</h2>
-        <div id="@date" class="carousel slide" data-ride="carousel">
-
-            <div class="carousel-inner">
-                @{ var first = "active"; }
+        //return if the movies are older than today
+        if (date < DateOnly.FromDateTime(DateTime.Now)) continue;
+        
+        <div class="date-row"><h2 class="date-row-date">
+            
+            @date
+        </h2></div>
+        
+        <div>
+            <div class="shows_container">
                 @foreach (var movie in Model[@date].Keys)
                 {
-                    <div class="@first carousel-item ">
-                        @{ first = ""; }
+      
                         <div class="shows_page_show_card">
                             <img class="show_image" src="@movie.Poster">
                             <div class="show_times">
-                                <button class="btn btn-primary">TEST</button>
+                                @foreach (var show in Model[@date][@movie])
+                                {
+                                
+                                <form method="get" class="show-button">
+                                <button class="btn btn-primary" asp-controller="Tickets" asp-action="quantity" asp-route-id="@show.Id">
+                                    Zaal @show.Room om @TimeOnly.FromDateTime(show.StartTime)
+                                </button>
+                                </form>
+                                }
                             </div>
-                        </div>
-                        <form method="get">
+                        
+                        <form method="get" class="info-button">
                             <button class="btn btn-secondary w-100" asp-controller="Movies" asp-action="index" asp-route-id="@movie.Name">Film-info</button>
                         </form>
-
-                    </div>
+</div>
+  
                 }
             </div>
         </div>
