--- a/cinema/cinema/Views/Tickets/Create.cshtml
+++ b/cinema/cinema/Views/Tickets/Create.cshtml
@@ -16,7 +16,7 @@
 <hr/>
 <div class="row">
     <div class="col-md-4">
-        <form method="get" asp-action="payment">
+        <form method="get" asp-action="Reservation">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" name="quantity" value="@quantity">
             <input type="hidden" name="showId" value="@ViewBag.show">
