--- a/cinema/cinema/Views/Shared/_Layout.cshtml
+++ b/cinema/cinema/Views/Shared/_Layout.cshtml
@@ -6,6 +6,8 @@
     <title>@ViewData["Title"] - cinema</title>
     <link rel="stylesheet" href="~/lib/bootstrap/bootstrap.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
+        @await RenderSectionAsync("Styles", required: false)
+
 </head>
 <body>
     <header>
