--- a/cinema/cinema/Views/Tickets/Create.cshtml
+++ b/cinema/cinema/Views/Tickets/Create.cshtml
@@ -3,7 +3,7 @@
 
 @{
     ViewData["Title"] = "Create";
-    Layout = "~/Pages/Shared/_Layout.cshtml";
+    Layout = "~/Views/Shared/_Layout.cshtml";
     int quantity = ViewBag.quantity;
 }
 
