--- a/cinema/cinema/Views/Tickets/Index.cshtml
+++ b/cinema/cinema/Views/Tickets/Index.cshtml
@@ -2,7 +2,7 @@
 
 @{
     ViewData["Title"] = "Index";
-    Layout = "~/Pages/Shared/_Layout.cshtml";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
 <h1 class="h1">Mijn Tickets</h1>
