--- a/cinema/cinema/wwwroot/css/shows.css
+++ b/cinema/cinema/wwwroot/css/shows.css
@@ -2,8 +2,11 @@
     display: grid;
     grid-template-columns: 200px 1fr;
     grid-template-rows: auto 1fr;
-    margin: 0 1rem;
+    margin: 0 1rem 1rem 1rem;
     max-width:600px;
+    box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
+    -webkit-box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
+    -moz-box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
 }
 .show_image{
     height:auto;
@@ -12,7 +15,7 @@
 }
 .shows_container{
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr;
     grid-auto-rows: 25rem;
 }
 @media screen and (max-width: 1230px){
@@ -28,6 +31,7 @@
 }
 .show_times{
     padding:0.5rem;
+    overflow-y:scroll;
 }
 .date-row{
     display:flex;
