--- a/cinema/cinema/Views/Shows/Index.cshtml
+++ b/cinema/cinema/Views/Shows/Index.cshtml
@@ -47,7 +47,7 @@
                             </div>
                         
                         <form method="get" class="info-button">
-                            <button class="btn btn-secondary w-100" asp-controller="Movies" asp-action="index" asp-route-id="@movie.Name">Film-info</button>
+                            <button class="btn btn-secondary w-100" asp-controller="Movies" asp-action="Details" asp-route-id="@movie.Name">Film-info</button>
                         </form>
 </div>
   
