--- a/cinema/cinema/Views/Tickets/Quantity.cshtml
+++ b/cinema/cinema/Views/Tickets/Quantity.cshtml
@@ -20,7 +20,7 @@
             <h2>Hoeveel kaartjes wilt u kopen?</h2>
             <form method="get" asp-action="create">
                 <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-                <input type="hidden" name="showId" value="5">
+                <input type="hidden" name="showId" value="@ViewBag.ShowId">
                 <div class="form-group form-check">
                     <select name="quantity" id="quantity">
                         <option value="1">1</option>
