--- a/cinema/cinema/Views/Movies/Details.cshtml
+++ b/cinema/cinema/Views/Movies/Details.cshtml
@@ -4,75 +4,59 @@
     ViewData["Title"] = "Details";
 }
 
-<h1>Details</h1>
+<h1>    @Html.DisplayFor(model => model.Name) (@Html.DisplayFor(model => model.ReleaseYear))</h1>
 
-<div>
-    <h4>Movie</h4>
-    <hr />
-    <dl class="row">
-        <dt class = "col-sm-2">
+<table class="table">
+    <thead>
+    <tr>
+        <th style="width: 10%">
             @Html.DisplayNameFor(model => model.Description)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Description)
-        </dd>
-        <dt class = "col-sm-2">
+        </th>
+        <th style="width: 10%">
             @Html.DisplayNameFor(model => model.Director)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Director)
-        </dd>
-        <dt class = "col-sm-2">
+        </th>
+        <th style="width: 10%">
             @Html.DisplayNameFor(model => model.Cast)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Cast)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.ReleaseYear)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.ReleaseYear)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.CountryOfOrigin)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.CountryOfOrigin)
-        </dd>
-        <dt class = "col-sm-2">
+        </th>
+        <th style="width: 10%">
             @Html.DisplayNameFor(model => model.Length)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Length)
-        </dd>
-        <dt class = "col-sm-2">
+        </th>
+        <th style="width: 10%">
             @Html.DisplayNameFor(model => model.Genre)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Genre)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Poster)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Poster)
-        </dd>
-        <dt class = "col-sm-2">
+        </th>
+        <th style="width: 10%">
             @Html.DisplayNameFor(model => model.Language)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Language)
-        </dd>
-        <dt class = "col-sm-2">
+        </th>
+        <th style="width: 10%">
             @Html.DisplayNameFor(model => model.ThreeD)
-        </dt>
-        <dd class = "col-sm-10">
+        </th>
+    </tr>
+    </thead>
+    <tbody align="center" align-text="left">
+    <tr>
+        <td style="width: 10%">
+            @Html.DisplayFor(model => model.Description)
+        </td>
+        <td style="width: 10%">
+            @Html.DisplayFor(model => model.Director)
+        </td>
+        <td style="width: 10%">
+            @Html.DisplayFor(model => model.Cast)
+        </td>
+        <td style="width: 10%">
+            @Html.DisplayFor(model => model.Length)
+        </td>
+        <td style="width: 10%">
+            @Html.DisplayFor(model => model.Genre)
+        </td>
+        <td style="width: 10%">
+            @Html.DisplayFor(model => model.Language)
+        </td>
+        <td style="width: 10%">
             @Html.DisplayFor(model => model.ThreeD)
-        </dd>
-    </dl>
-</div>
-<div>
-    <a asp-action="Edit" asp-route-id="@Model?.Name">Edit</a> |
-    <a asp-action="Index">Back to List</a>
-</div>
+        </td>
+        <td style="width: 30%">
+            <img src= "@Html.DisplayFor(model => model.Poster)" alt="Sample Image" style="height:500px;width:300px;"/>
+        </td>
+    </tr>
+    </tbody>
