--- a/cinema/cinema/Views/Tickets/Quantity.cshtml
+++ b/cinema/cinema/Views/Tickets/Quantity.cshtml
@@ -17,10 +17,11 @@
         </div>
         <div class="col-md-6">
 
-            <h2>Hoeveel kaartjes wilt u kopen?</h2>
+            <h2>Hoeveel @ViewBag.Arrangement kaartjes wilt u kopen?</h2>
             <form method="get" asp-action="create">
                 <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                 <input type="hidden" name="showId" value="@ViewBag.ShowId">
+                <input type="hidden" name="arrangement" value="@ViewBag.Arrangement">
                 <div class="form-group form-check">
                     <select name="quantity" id="quantity">
                         <option value="1">1</option>
