--- a/cinema/cinema/Views/Tickets/Index.cshtml
+++ b/cinema/cinema/Views/Tickets/Index.cshtml
@@ -16,6 +16,7 @@
             <div class="col-md-3 mb-4">
                 <div class="card ticket">
                     <div class="card-body">
+                        <h4>@item.Arrangements kaartje</h4>
                         <h5 class="card-title">@item.show.Movie.Name</h5>
                         <img src="@item.show.Movie.Poster" style="max-height: 600px;" alt="@item.show.Movie.Name" class="card-img-top">
                         <br><br>
@@ -35,7 +36,7 @@
                         <p class="card-text">Nummer: @item.SeatNr</p>
                         <hr>
                         <h4 class="card-text">Code: @item.Code</h4>
-        
+
                     </div>
                 </div>
             </div>
