--- a/cinema/cinema/Views/Tickets/Reservation.cshtml
+++ b/cinema/cinema/Views/Tickets/Reservation.cshtml
@@ -5,7 +5,7 @@
     Layout = "_Layout";
 }
 
-<h2>Kaartjes</h2>
+<h2>@ViewBag.Arrangement kaartjes</h2>
 <hr>
 
 <div>Aantal kaartjes <strong>@ViewBag.quantity</strong></div>
@@ -19,6 +19,7 @@
     <div asp-validation-summary="ModelOnly" class="text-danger"></div>
     <input type="hidden" value="@ViewBag.showId" name="showId">
     <input type="hidden" value="@ViewBag.quantity" name="quantity">
+    <input type="hidden" value="@ViewBag.Arrangement" name="arrangement">
     <input type="hidden" value="@ViewBag.childDiscount" name="childDiscount">
     <input type="hidden" value="@ViewBag.studentDiscount" name="studentDiscount">
     <input type="hidden" value="@ViewBag.seniorDiscount" name="seniorDiscount">
