--- a/cinema/cinema/Views/Shows/Index.cshtml
+++ b/cinema/cinema/Views/Shows/Index.cshtml
@@ -72,7 +72,7 @@
                                 @foreach (var show in Model[@date][@movie])
                                 {
                                 
-                                    <form method="get" class="show-button" asp-controller="Tickets" asp-action="quantity" >
+                                    <form method="get" class="show-button" asp-controller="Tickets" asp-action="Arrangements" >
                                         <input type="hidden" name="showId" value="@show.Id"/>
                                         <button class="btn btn-primary" type="submit">
                                             Zaal @show.Room om @TimeOnly.FromDateTime(show.StartTime)
