--- a/cinema/cinema/Views/Tickets/Quantity.cshtml
+++ b/cinema/cinema/Views/Tickets/Quantity.cshtml
@@ -17,7 +17,7 @@
             <div>
                 <h4>Hoeveel @ViewBag.Arrangement kaartjes wilt u kopen?</h4>
 
-                <form method="get" asp-action="create">
+                <form method="get" asp-action="Discount">
                     <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                     <input type="hidden" name="showId" value="@ViewBag.ShowId">
                     <input type="hidden" name="arrangement" value="@ViewBag.Arrangement">
