--- a/cinema/cinema/Views/Tickets/Reservation.cshtml
+++ b/cinema/cinema/Views/Tickets/Reservation.cshtml
@@ -7,11 +7,20 @@
 
 <h2>Betalings overzicht</h2>
 <hr>
-<p>Film: @ViewBag.showName</p>
-<p>Type kaartje @ViewBag.Arrangement</p>
+<p>Film: <strong>@ViewBag.movieName</strong></p>
+<p>3D: 
+@if (@ViewBag.threeD)
+{
+    <strong>ja (+ €3.5 per kaartje)</strong>
+}
+else
+{
+    <strong>nee</strong>
+}
+    </p>
 <hr>
-
 <div>Aantal kaartjes: <strong>@ViewBag.quantity</strong></div>
+<p>Type:<strong> @ViewBag.Arrangement</strong> (+ € @ViewBag.arrangementCost per kaartje)</p>
 <hr>
 <p>Popcorn: <strong>+ € @ViewBag.popcorn </strong></p>
 <p>Korting: <strong>- €@ViewBag.discount </strong></p>
