--- a/cinema/cinema/wwwroot/css/site.css
+++ b/cinema/cinema/wwwroot/css/site.css
@@ -14,9 +14,28 @@ html {
 }
 
 body {
-  margin-bottom: 60px;
+    margin-bottom: 60px;
+    background-image: url(../imagesStyling/background.jpg);
+    background-size: cover;
 }
 
 .card.show h5{
   min-height:4rem;
+}
+
+a {
+    color:ghostwhite !important;
+}
+
+.logo{
+    width:75px;
+    height:56px;
+}
+
+footer{
+    max-height:100px;
+}
+
+.footer-container{
+    margin-bottom:0;
 }
