--- a/cinema/cinema/Views/Maps/Index.cshtml
+++ b/cinema/cinema/Views/Maps/Index.cshtml
@@ -2,21 +2,136 @@
     ViewData["Title"] = "Index";
 }
 <meta name="viewport" content="width=device-width, initial-scale=1">  
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">  
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>  
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>  
-<div id="map" style="width:100%;height:500px"></div>  
-<script>  
-        function myMap() {  
-            var mapCanvas = document.getElementById("map");  
-            var myCenter = new google.maps.LatLng(51.5840, 4.7979);  
-            var mapOptions = { center: myCenter, zoom: 14 };  
-            var map = new google.maps.Map(mapCanvas, mapOptions);  
-            var marker = new google.maps.Marker({  
-                position: myCenter,  
-                animation: google.maps.Animation.BOUNCE  
-            });  
-            marker.setMap(map);  
-        }  
+<link rel="stylesheet" href="\lib\bootstrap\dist\css\bootstrap.min.css">  
+<script src="lib\bootstrap\dist\js\bootstrap.min.js"></script>  
+<title>Places Searchbox</title>  
+<style>  
+     
+    #dvMap {  
+        height: 50%;  
+    }  
+  
+    .button {  
+        background-color: #4CAF50;  
+        border: none;  
+        color: white;  
+        padding: 15px 32px;  
+        text-align: center;  
+        text-decoration: none;  
+        display: inline-block;  
+        font-size: 16px;  
+        margin: 4px 2px;  
+        cursor: pointer;  
+    }  
+  
+    .button4 {  
+        border-radius: 9px;  
+    }  
+  
+    input[type=text], select {  
+        width: 40%;  
+        padding: 12px 20px;  
+        margin: 10px 0;  
+        display: inline-block;  
+        border: 1px solid #ccc;  
+        border-radius: 4px;  
+        box-sizing: border-box;  
+    }  
+</style>  
+  
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCXagAu3PsqAZ2hW-1CA7HnMY0BjBF87GM&libraries=places">  
     </script>  
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCXagAu3PsqAZ2hW-1CA7HnMY0BjBF87GM&callback=myMap"></script>
+<script type="text/javascript">  
+            var source, destination;  
+            var directionsDisplay;  
+            var directionsService = new google.maps.DirectionsService();  
+            google.maps.event.addDomListener(window, 'load', function () {  
+                new google.maps.places.SearchBox(document.getElementById('txtSource'));  
+                directionsDisplay = new google.maps.DirectionsRenderer({ 'draggable': true });  
+            });  
+  
+            function GetRoute() {  
+                var cinema = new google.maps.LatLng(51.5840, 4.7979);  
+                var mapOptions = {  
+                    zoom: 16,  
+                    center: cinema  
+                };  
+                map = new google.maps.Map(document.getElementById('dvMap'), mapOptions);  
+                directionsDisplay.setMap(map);
+                directionsDisplay.setPanel(document.getElementById('dvPanel'));
+                
+                source = document.getElementById("txtSource").value;  
+                destination = cinema;  
+                
+                var selectedMode = document.getElementById("mode").value;
+                
+                var request = {  
+                    origin: source,  
+                    destination: destination,  
+                    travelMode: google.maps.TravelMode[selectedMode] 
+                };  
+                directionsService.route(request, function (response, status) {  
+                    if (status === google.maps.DirectionsStatus.OK) {  
+                        directionsDisplay.setDirections(response);  
+                    }  
+                });  
+  
+                  
+                var service = new google.maps.DistanceMatrixService();  
+                service.getDistanceMatrix({  
+                    origins: [source],  
+                    destinations: [destination],  
+                    travelMode: google.maps.TravelMode[selectedMode],  
+                    unitSystem: google.maps.UnitSystem.METRIC,  
+                    avoidHighways: false,  
+                    avoidTolls: false  
+                }, function (response, status) {  
+                    if (status === google.maps.DistanceMatrixStatus.OK && response.rows[0].elements[0].status !== "ZERO_RESULTS") {  
+                        var distance = response.rows[0].elements[0].distance.text;  
+                        var duration = response.rows[0].elements[0].duration.text;  
+                        var dvDistance = document.getElementById("dvDistance");  
+                        dvDistance.innerHTML = "";  
+                        dvDistance.innerHTML += "Afstand is: " + distance + "<br />";  
+                        dvDistance.innerHTML += "Tijd: " + duration;  
+                        //alert(dvDistance.innerHTML);  
+                    } else {  
+                        alert("Aanvraag niet beschikbaar");  
+                    }  
+                });  
+            }  
+        </script>
+<script>
+        if (navigator.geolocation) {
+              navigator.geolocation.getCurrentPosition(
+                (position) => {
+                  const pos = {
+                    lat: position.coords.latitude,
+                    lng: position.coords.longitude,
+                  };
+                  })
+                }
+    </script>
+                                  
+                    <input type="text" id="txtSource" placeholder="Vanaf" />
+                       
+                    <input type="button" value="Show" onclick="GetRoute()" class="button button4" />
+                        <div id="Dropdown">  
+                        <b>Ik kom: </b>  
+                        <select id="mode">  
+                            <option value="DRIVING">Met de auto</option>  
+                            <option value="WALKING">Lopend</option>  
+                            <option value="BICYCLING">Fietsend</option>  
+                            <option value="TRANSIT">Met de OV</option>  
+                        </select>
+                        </div>
+                    <hr />  
+                    <div id="dvDistance" style="font-weight:bold; text-align: center">  
+</div>
+                    <div id="dvMap">  
+                    </div>                                 
+                    <div id="dvPanel">  
+                    </div>   
+                    <hr />  
+<footer>  
+    <p style="font-weight: bold; text-align: center;">@DateTime.Now.ToLocalTime()</p>
+</footer>  
